bk_ida/gccida/g2/timevar_push
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:738:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v3 = stack_0; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:740:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
if ( stack_0 ) 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:742:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v5 = stack_0->timevar; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:745:54: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v5->elapsed.user = ( float)( v4 - start_time.user) + stack_0->timevar->elapsed.user; 
                                                     ^~~~~~~
                                                     stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:760:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v3 = stack_0; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:763:1: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = v9; 
^~~~~~~
stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/timevar_push/src/obj/timevar.o] Error 1
